--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,9 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <img height="120px" width="120px" src="img/vixphy-icon.png">
-    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <img height="80px" width="190px" src="img/vixphy-icon.png">
+    <!--   <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a> -->
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> 
       Menu
       <i class="fa fa-bars"></i>
     </button>
