--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <img height="80px" width="190px" src="img/vixphy-icon.png">
+    <img width="180px" src="img/vixphy-icon.png">
     <!--   <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a> -->
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> 
       Menu
